# langchain_pratices_rag

./: .gitignore  README.md
rag_demo/: pyproject.toml  rag_demo.ipynb  speech.txt
rag_demo/FAISS_text/: index.faiss  index.pkl
