[project]
name = "rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.2.0",
    "certifi>=2025.8.3",
    "faiss-cpu>=1.12.0",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.3.1",
    "load>=1.0.14",
    "pymupdf<1.21.0",
    "pypdf>=6.1.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "tools>=1.0.5",
    "wikipedia>=1.4.0",
]
